fix vertical centering on mobile

--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,9 @@ body {
 
 .container{
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   position: relative;
+  margin: auto;
 }
 .header{
   position: relative;
@@ -123,12 +124,11 @@ body {
 }
 footer{
   position: relative;
-  
   width: 97.5%;
   height: 2.5rem;
   text-align: center;
 }
+
 .smaller-square{
   margin: auto;
-
 }
